vcs/specs/parser/fail/expressions/invalid_yield.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, yield, error
// @description: Yield without expression
// @expected-error: E048

fn* test() {
    yield;  // Yield requires an expression
}
